--- a/style.css
+++ b/style.css
@@ -61,11 +61,11 @@
     background-color: gray;
 }
 .olimp-bet {
-    display: flex;
-    max-width: 1650px;
+    /* display: flex; */
+    /* max-width: 1650px; */
     height: 56px;
     background-color:rgb(102, 19, 19);
-    justify-content:space-between;
+    /* justify-content:space-between; */
 }
 .live-game {
     color:yellow;
@@ -81,12 +81,14 @@
     text-decoration: none;
 }
 .games {
-    padding: 15px;
+    /* padding-top: 10px; */
+    /* background-color: rgb(102, 19, 19); */
 }
 .registration {
     /* background-color: yellow; */
     height: 45px;
-    margin-top: 15px;
+    margin-top: 22px;
+    
 }
 
 .reg {
@@ -95,10 +97,10 @@
 }
 .bottom-menu2 {
     display: flex;
-    max-width: 1650px;
+    /* max-width: 1650px; */
     height: 33px;
     background-color:gray;
-    justify-content:center;
+    /* justify-content:center; */
     padding-left: 10px;
 }
 .bottom-menu3 {
@@ -232,7 +234,7 @@
 .matches-live {
     background-color: rgb(145, 144, 144);
     height: 35px;
-    width: 1251px;
+    /* width: 1251px; */
     display: flex;
 }
 .m-live {
@@ -243,7 +245,7 @@
     height: 35px;
     display: flex;
     margin-top: 10px;
-    width: 1251px;
+    /* width: 1251px; */
 }
 .sportss {
     margin-left: 15px;
@@ -262,17 +264,31 @@ a.sportss {
 .sport-images {
     margin-top: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .footer {
-    width: 1510px;
+    /* width: 1510px; */
     background-color: rgb(145, 144, 144);
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-@media only screen and (max-width: 600px) {
-    body {
-      display: none;
+
+@media only screen and (max-width: 700px){
+    .bottom-menu2{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 250px;
     }
-  }
+    .sport-images {
+        margin-top: 20px;
+        display: block;
+    }
+    .footer {
+        /* width: 1510px; */
+        background-color: rgb(145, 144, 144);
+        display: block;
+        /* justify-content: space-around; */
+        /* align-items: center; */
+    }
+}
